--- a/src/components/panels/collapsible-panel/collapsible-panel.mod.css
+++ b/src/components/panels/collapsible-panel/collapsible-panel.mod.css
@@ -4,7 +4,7 @@
 }
 
 .base-container {
-  box-shadow: var(--shadow-1-second);
+  box-shadow: var(--shadow-1);
   border-radius: var(--border-radius-6);
   position: relative;
   min-width: 550px;
@@ -119,7 +119,7 @@
   width: var(--size-icon-container);
   border-radius: 50%;
   flex-shrink: 0;
-  box-shadow: var(--shadow-7-first), var(--shadow-7-second);
+  box-shadow: var(--shadow-7);
 }
 
 .header-icon-small {
