--- a/src/components/inputs/multiline-text-input/multiline-text-input.mod.css
+++ b/src/components/inputs/multiline-text-input/multiline-text-input.mod.css
@@ -13,11 +13,11 @@
 /* Default */
 
 .textarea {
-  color: var(--token-font-color-default);
-  font-family: var(--token-font-family-default);
-  font-size: var(--token-font-size-default);
+  color: var(--font-color-default);
+  font-family: var(--font-family-default);
+  font-size: var(--font-size-default);
   padding: var(--spacing-4) var(--spacing-8);
-  border-radius: var(--token-border-radius-input);
+  border-radius: var(--border-radius-input);
   transition: var(--transition-standard);
   line-height: var(--size-input-line-height);
   min-height: var(--size-input-min-height);
@@ -30,26 +30,26 @@
 }
 
 .textarea::placeholder {
-  color: var(--token-font-color-placeholder);
+  color: var(--font-color-placeholder);
 }
 
 .pristine {
   composes: textarea;
-  border: 1px solid var(--token-border-color-input-pristine);
-  background: var(--token-background-color-input-pristine);
+  border: 1px solid var(--border-color-input-pristine);
+  background: var(--background-color-input-pristine);
 }
 
 /* Focused */
 .pristine:focus {
-  border: 1px solid var(--token-border-color-input-focus);
+  border: 1px solid var(--border-color-input-focus);
 }
 
 /* Disabled */
 .disabled {
   composes: textarea;
-  color: var(--token-font-color-disabled);
-  border: 1px solid var(--token-border-color-input-disabled);
-  background: var(--token-background-color-input-disabled);
+  color: var(--font-color-disabled);
+  border: 1px solid var(--border-color-input-disabled);
+  background: var(--background-color-input-disabled);
   resize: none;
 }
 
@@ -57,8 +57,8 @@
 
 .readonly {
   composes: textarea;
-  border: 1px solid var(--token-border-color-input-readonly);
-  color: var(--token-font-color-readonly);
+  border: 1px solid var(--border-color-input-readonly);
+  color: var(--font-color-readonly);
 }
 
 /******** Form validation ********/
@@ -67,16 +67,16 @@
 
 .error {
   composes: textarea;
-  color: var(--token-font-color-error);
-  border: 1px solid var(--token-border-color-input-error);
+  color: var(--font-color-error);
+  border: 1px solid var(--border-color-input-error);
 }
 
 /* hasWarning */
 
 .warning {
   composes: textarea;
-  color: var(--token-font-color-warning);
-  border: 1px solid var(--token-border-color-input-warning);
+  color: var(--font-color-warning);
+  border: 1px solid var(--border-color-input-warning);
 }
 
 /******** Variations ********/
