--- a/src/components/inputs/text-input/text-input.mod.css
+++ b/src/components/inputs/text-input/text-input.mod.css
@@ -6,14 +6,14 @@
 }
 
 .input {
-  color: var(--token-font-color-default);
-  font-family: var(--token-font-family-default);
-  font-size: var(--token-font-size-default);
-  border-radius: var(--token-border-radius-input);
-  height: var(--token-size-height-input);
-  line-height: var(--token-size-height-input);
-  background-color: var(--token-background-color-input-pristine);
-  border: 1px var(--token-border-color-input-pristine) solid;
+  color: var(--font-color-default);
+  font-family: var(--font-family-default);
+  font-size: var(--font-size-default);
+  border-radius: var(--border-radius-input);
+  height: var(--size-height-input);
+  line-height: var(--size-height-input);
+  background-color: var(--background-color-input-pristine);
+  border: 1px var(--border-color-input-pristine) solid;
   width: 100%;
   padding: 0 var(--spacing-8);
   transition: var(--transition-standard);
@@ -23,42 +23,42 @@
 }
 
 .input::placeholder {
-  color: var(--token-font-color-placeholder);
+  color: var(--font-color-placeholder);
 }
 
 /* States */
 
 .pristine {
   composes: input;
-  border-color: var(--token-border-color-input-pristine);
-  background-color: var(--token-background-color-input-pristine);
+  border-color: var(--border-color-input-pristine);
+  background-color: var(--background-color-input-pristine);
 }
 
 .warning {
   composes: input;
-  color: var(--token-font-color-warning);
-  border-color: var(--token-border-color-input-warning);
+  color: var(--font-color-warning);
+  border-color: var(--border-color-input-warning);
 }
 
 .error {
   composes: input;
-  color: var(--token-font-color-error);
-  border-color: var(--token-border-color-input-error);
+  color: var(--font-color-error);
+  border-color: var(--border-color-input-error);
 }
 
 .disabled {
   composes: input;
   cursor: not-allowed;
-  color: var(--token-font-color-disabled);
-  border-color: var(--token-border-color-input-disabled);
-  background-color: var(--token-background-color-input-disabled);
+  color: var(--font-color-disabled);
+  border-color: var(--border-color-input-disabled);
+  background-color: var(--background-color-input-disabled);
   opacity: 1; /* fix for mobile safari */
 }
 
 .readonly {
   composes: input;
-  border-color: var(--token-border-color-input-readonly);
-  color: var(--token-font-color-readonly);
+  border-color: var(--border-color-input-readonly);
+  color: var(--font-color-readonly);
   cursor: default;
 }
 
@@ -66,7 +66,7 @@
 
 .pristine:active,
 .pristine:focus {
-  border-color: var(--token-border-color-input-focus);
-  background: var(--token-background-color-input-pristine);
-  color: var(--token-font-color-default);
+  border-color: var(--border-color-input-focus);
+  background: var(--background-color-input-pristine);
+  color: var(--font-color-default);
 }
