--- a/src/components/inputs/time-input/time-input-body.mod.css
+++ b/src/components/inputs/time-input/time-input-body.mod.css
@@ -7,14 +7,14 @@
 .time-input {
   width: 100%;
   appearance: none;
-  background: var(--token-background-color-input-pristine);
-  border-radius: var(--token-border-radius-input) 0 0
-    var(--token-border-radius-input);
-  border-bottom: 1px solid var(--token-border-color-input-pristine);
-  border-left: 1px solid var(--token-border-color-input-pristine);
-  border-top: 1px solid var(--token-border-color-input-pristine);
+  background: var(--background-color-input-pristine);
+  border-radius: var(--border-radius-input) 0 0
+    var(--border-radius-input);
+  border-bottom: 1px solid var(--border-color-input-pristine);
+  border-left: 1px solid var(--border-color-input-pristine);
+  border-top: 1px solid var(--border-color-input-pristine);
   border-right: none;
-  height: var(--token-size-height-input);
+  height: var(--size-height-input);
   flex-grow: 1;
   font: inherit;
   margin-right: 0; /* stop that jumping */
@@ -28,8 +28,8 @@
 .time-input:focus + .clear-icon-container,
 .time-input:active,
 .time-input:active + .clear-icon-container {
-  border-color: var(--token-border-color-input-focus);
-  color: var(--token-font-color-default);
+  border-color: var(--border-color-input-focus);
+  color: var(--font-color-default);
   transition: var(--transition-standard);
 }
 
@@ -37,17 +37,17 @@
 
 .time-input.error,
 .time-input.error + .clear-icon-container {
-  color: var(--token-font-color-error);
-  border-color: var(--token-border-color-input-error);
+  color: var(--font-color-error);
+  border-color: var(--border-color-input-error);
 }
 
 /* Disabled */
 
 .time-input:disabled,
 .time-input:read-only {
-  background-color: var(--token-background-color-input-disabled);
-  color: var(--token-font-color-disabled);
-  border-color: var(--token-border-color-input-disabled);
+  background-color: var(--background-color-input-disabled);
+  color: var(--font-color-disabled);
+  border-color: var(--border-color-input-disabled);
   opacity: 1; /* fix for mobile safari */
 }
 
@@ -59,11 +59,11 @@
 
 .icon-container {
   align-items: center;
-  background-color: var(--token-background-color-input-pristine);
-  border-bottom: 1px solid var(--token-border-color-input-pristine);
-  border-right: 1px solid var(--token-border-color-input-pristine);
-  border-top: 1px solid var(--token-border-color-input-pristine);
-  height: var(--token-size-height-input);
+  background-color: var(--background-color-input-pristine);
+  border-bottom: 1px solid var(--border-color-input-pristine);
+  border-right: 1px solid var(--border-color-input-pristine);
+  border-top: 1px solid var(--border-color-input-pristine);
+  height: var(--size-height-input);
   border-left: none;
   display: flex;
   padding: var(--spacing-4);
@@ -76,13 +76,13 @@
 
 .clock-icon-container {
   composes: icon-container;
-  border-top-right-radius: var(--token-border-radius-input);
-  border-bottom-right-radius: var(--token-border-radius-input);
+  border-top-right-radius: var(--border-radius-input);
+  border-bottom-right-radius: var(--border-radius-input);
 }
 
 .icon-container-disabled {
   cursor: not-allowed;
-  background-color: var(--token-background-color-input-disabled);
-  color: var(--token-font-color-disabled);
-  border-color: var(--token-border-color-input-disabled);
+  background-color: var(--background-color-input-disabled);
+  color: var(--font-color-disabled);
+  border-color: var(--border-color-input-disabled);
 }
