--- a/src/components/internals/calendar-menu/calendar-menu.mod.css
+++ b/src/components/internals/calendar-menu/calendar-menu.mod.css
@@ -1,7 +1,7 @@
 .menuBase {
   overflow-y: scroll;
-  border: 1px solid var(--token-border-color-input-focus);
-  border-radius: var(--token-border-radius-input);
+  border: 1px solid var(--border-color-input-focus);
+  border-radius: var(--border-radius-input);
   margin-top: var(--spacing-4);
   position: absolute;
   width: 100%;
@@ -10,11 +10,11 @@
 }
 
 .menuBase.warning {
-  border-color: var(--token-border-color-input-warning);
+  border-color: var(--border-color-input-warning);
 }
 
 .menuBase.error {
-  border-color: var(--token-border-color-input-error);
+  border-color: var(--border-color-input-error);
 }
 
 .menu {
