--- a/src/components/label/required-indicator.mod.css
+++ b/src/components/label/required-indicator.mod.css
@@ -1,4 +1,4 @@
 /* FIXME: Add proper tone when tones are refactored */
 .highlighted {
-  color: var(--token-font-color-warning);
+  color: var(--font-color-warning);
 }
