--- a/src/components/switches/checkbox/checkbox.mod.css
+++ b/src/components/switches/checkbox/checkbox.mod.css
@@ -12,11 +12,11 @@
 }
 
 .checkboxWrapper svg [id$='borderAndContent'] > [id$='border'] {
-  stroke: 1px var(--token-border-color-input-pristine) solid;
+  stroke: 1px var(--border-color-input-pristine) solid;
 }
 
 .checkboxWrapper svg [id$='borderAndContent'] > [id$='content'] {
-  fill: var(--token-border-color-input-focus);
+  fill: var(--border-color-input-focus);
 }
 
 /* Hidden input */
@@ -38,21 +38,21 @@
 /* hasError */
 
 .hasError svg [id$='borderAndContent'] > [id$='content'] {
-  fill: var(--token-border-color-input-error);
+  fill: var(--border-color-input-error);
 }
 
 .hasError svg [id$='borderAndContent'] > [id$='border'] {
-  stroke: var(--token-font-color-error);
+  stroke: var(--font-color-error);
 }
 
 /* isDisabled */
 
 .isDisabled svg [id$='borderAndContent'] > [id$='content'] {
-  fill: var(--token-font-color-disabled);
+  fill: var(--font-color-disabled);
 }
 
 .isDisabled svg [id$='borderAndContent'] > [id$='border'] {
-  stroke: var(--token-border-color-input-disabled);
+  stroke: var(--border-color-input-disabled);
 }
 
 /* Hover */
@@ -61,9 +61,9 @@
   svg
   [id$='borderAndContent']
   > [id$='border'] {
-  stroke: var(--token-border-color-input-focus);
+  stroke: var(--border-color-input-focus);
 }
 
 .isHovered svg [id$='borderAndContent'] > [id$='border'] {
-  stroke: var(--token-border-color-input-focus);
+  stroke: var(--border-color-input-focus);
 }
