fix: use deprecated shadows for outliers

--- a/src/components/buttons/primary-button/primary-button.mod.css
+++ b/src/components/buttons/primary-button/primary-button.mod.css
@@ -38,7 +38,7 @@
 
 .active,
 .button:active {
-  box-shadow: var(--shadow-7);
+  box-shadow: inset var(--shadow-7-first), inset var(--shadow-7-second);
 }
 
 /**
