--- a/src/components/inputs/money-input/money-input.mod.css
+++ b/src/components/inputs/money-input/money-input.mod.css
@@ -1,10 +1,10 @@
 .currency-label {
   display: flex;
-  color: var(--token-font-color-disabled);
-  background-color: var(--token-background-color-input-disabled);
-  border-top-left-radius: var(--token-border-radius-input);
-  border-bottom-left-radius: var(--token-border-radius-input);
-  border: 1px var(--token-border-color-input-disabled) solid;
+  color: var(--font-color-disabled);
+  background-color: var(--background-color-input-disabled);
+  border-top-left-radius: var(--border-radius-input);
+  border-bottom-left-radius: var(--border-radius-input);
+  border: 1px var(--border-color-input-disabled) solid;
   border-right: 0;
   padding: 0 var(--spacing-8);
   align-items: center;
@@ -58,8 +58,8 @@
 
 .amount-readonly {
   composes: amountInput;
-  border-color: var(--token-border-color-input-readonly);
-  color: var(--token-font-color-readonly);
+  border-color: var(--border-color-input-readonly);
+  color: var(--font-color-readonly);
   cursor: default;
 }
 
