Reorganize design tokens and add story (#370)
* feat(basics): add tokens

* chore(tokens): add yaml basics

* chore: reorganize tokens

* chore: readd deprecated shadows

* chore: move reset and grid back

* chore: remove unused color generator

* fix: use deprecated shadows for outliers

* docs(custom-properties): clarify intentions

--- a/src/components/buttons/primary-button/primary-button.mod.css
+++ b/src/components/buttons/primary-button/primary-button.mod.css
@@ -26,14 +26,14 @@
 }
 
 .button {
-  box-shadow: var(--shadow-7-first), var(--shadow-7-second);
+  box-shadow: var(--shadow-7);
 }
 
 .active:hover,
 .active:focus,
 .button:hover,
 .button:focus {
-  box-shadow: var(--shadow-8-first), var(--shadow-8-second);
+  box-shadow: var(--shadow-8);
 }
 
 .active,
