--- a/src/components/typography/text/text.mod.css
+++ b/src/components/typography/text/text.mod.css
@@ -12,97 +12,110 @@
   --font-color: var(--color-black);
 }
 
-h1 {
+h1.headline {
   font-size: var(--font-h1);
 }
 
-h2 {
+h2.headline {
   font-size: var(--font-h2);
 }
 
-h3 {
+h3.headline {
   font-size: var(--font-h3);
 }
 
-h4 {
+h4.subheadline {
   font-size: var(--font-h4);
   font-weight: normal;
 }
 
-h5 {
+h5.subheadline {
   font-size: var(--font-h5);
   font-weight: normal;
 }
 
-.body-text {
-  font-size: var(--font-body);
-}
-
-small {
+.detail {
   font-size: var(--font-detail);
   display: block;
+
+  &.bold {
+    font-weight: bold;
+  }
+
+  &.italic {
+    font-style: italic;
+  }
+
+  &.primary {
+    color: var(--color-green);
+  }
+
+  &.information {
+    color: var(--color-blue);
+  }
+
+  &.secondary {
+    color: var(--color-gray-60);
+  }
+
+  &.positive {
+    color: var(--color-green-25);
+  }
+
+  &.negative {
+    color: var(--color-red);
+  }
+
+  &.inverted {
+    color: var(--color-white);
+  }
+
+  &.warning {
+    color: var(--color-orange);
+  }
 }
 
-h1,
-h2,
-h3 {
-  font-weight: 300;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
 .body-text,
 small {
   color: var(--font-color);
 }
 
-.bold {
-  font-weight: bold;
-}
+.body-text {
+  font-size: var(--font-body);
+  color: var(--color-black);
+  margin: 0;
 
-.italic {
-  font-style: italic;
-}
+  &.bold {
+    font-weight: bold;
+  }
 
-.information {
-  color: var(--color-blue);
-}
+  &.italic {
+    font-style: italic;
+  }
 
-.primary {
-  color: var(--color-green);
-}
+  &.primary {
+    color: var(--color-green);
+  }
 
-.secondary {
-  color: var(--color-gray-60);
-}
+  &.information {
+    color: var(--color-blue);
+  }
 
-.positive {
-  color: var(--color-green-25);
-}
+  &.secondary {
+    color: var(--color-gray-60);
+  }
 
-.negative {
-  color: var(--color-red);
-}
+  &.positive {
+    color: var(--color-green-25);
+  }
 
-.inverted {
-  color: var(--color-white);
-}
+  &.negative {
+    color: var(--color-red);
+  }
 
-.warning {
-  color: var(--color-orange);
+  &.inverted {
+    color: var(--color-white);
+  }
 }
 
 .inline-text {
@@ -117,4 +130,44 @@ small {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+h1,
+h2,
+h3 {
+  &.headline {
+    color: var(--font-color);
+    margin: 0;
+    font-weight: 300;
+  }
+}
+
+h4.subheadline,
+h5.subheadline {
+  margin: 0;
+  color: var(--font-color);
+
+  &.bold {
+    font-weight: bold;
+  }
+
+  &.primary {
+    color: var(--color-green);
+  }
+
+  &.information {
+    color: var(--color-blue);
+  }
+
+  &.secondary {
+    color: var(--color-gray-60);
+  }
+
+  &.positive {
+    color: var(--color-green-25);
+  }
+
+  &.negative {
+    color: var(--color-red);
+  }
 }
