--- a/src/components/typography/text/text.mod.css
+++ b/src/components/typography/text/text.mod.css
@@ -12,61 +12,32 @@
   --font-color: var(--color-black);
 }
 
-h1 {
-  font-size: var(--font-h1);
-}
-
-h2 {
-  font-size: var(--font-h2);
-}
-
-h3 {
-  font-size: var(--font-h3);
-}
-
-h4 {
-  font-size: var(--font-h4);
-  font-weight: normal;
-}
-
-h5 {
-  font-size: var(--font-h5);
-  font-weight: normal;
-}
-
 .body-text {
   font-size: var(--font-body);
+  color: var(--color-black);
+  margin: 0;
 }
 
-small {
+.detail {
+  color: var(--font-color);
   font-size: var(--font-detail);
   display: block;
 }
 
-h1,
-h2,
-h3 {
+.headline {
+  color: var(--font-color);
+  margin: 0;
   font-weight: 300;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+.subheadline {
   margin: 0;
+  font-weight: normal;
+  color: var(--font-color);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-.body-text,
-small {
-  color: var(--font-color);
+.primary {
+  color: var(--color-green);
 }
 
 .bold {
@@ -74,15 +45,11 @@ small {
 }
 
 .italic {
-  font-style: italic;
+ font-style: italic;
 }
 
 .information {
   color: var(--color-blue);
-}
-
-.primary {
-  color: var(--color-green);
 }
 
 .secondary {
@@ -103,6 +70,26 @@ small {
 
 .warning {
   color: var(--color-orange);
+}
+
+h1.headline {
+  font-size: var(--font-h1);
+}
+
+h2.headline {
+  font-size: var(--font-h2);
+}
+
+h3.headline {
+  font-size: var(--font-h3);
+}
+
+h4.subheadline {
+  font-size: var(--font-h4);
+}
+
+h5.subheadline {
+  font-size: var(--font-h5);
 }
 
 .inline-text {
