--- a/.storybook/main.mod.css
+++ b/.storybook/main.mod.css
@@ -7,3 +7,14 @@ body {
 body {
   overflow: auto;
 }
+
+/*
+  Make main panel more readable when its showing a README.
+  Limit width to make text more readable.
+*/
+:global(.storybook-readme-story) {
+  max-width: 800px;
+
+  /* We need !important since the element has padding as  inline styles too */
+  padding: 32px !important;
+}
