--- a/src/components/buttons/secondary-button/secondary-button.mod.css
+++ b/src/components/buttons/secondary-button/secondary-button.mod.css
@@ -36,6 +36,10 @@
   border-radius: var(--border-radius-6);
 }
 
+a.container {
+  text-decoration: none;
+}
+
 /* The actual button element */
 
 .button {
