--- a/src/components/avatar/avatar.mod.css
+++ b/src/components/avatar/avatar.mod.css
@@ -6,6 +6,7 @@
 
 .avatar-base {
   align-items: center;
+  font-family: var(--font-family-default);
   background-color: var(--color-gray-60);
   border-radius: 100%;
   color: var(--color-white);
