--- a/src/components/typography/text/text.mod.css
+++ b/src/components/typography/text/text.mod.css
@@ -19,10 +19,13 @@
   margin: 0;
 }
 
+.detail-container {
+  font-family: var(--font-family-default);
+}
+
 .detail {
   color: var(--font-color);
   font-size: var(--font-detail);
-  font-family: var(--font-family-default);
   display: block;
 }
 
