chore: move more styles internal

--- a/src/components/inputs/localized-multiline-text-input/localized-multiline-text-input.mod.css
+++ b/src/components/inputs/localized-multiline-text-input/localized-multiline-text-input.mod.css
@@ -30,6 +30,7 @@
 }
 
 .input {
+  box-sizing: border-box;
   color: var(--font-color-default);
   font-family: var(--font-family-default);
   font-size: var(--font-size-default);
