--- a/src/components/inputs/text-input/text-input.mod.css
+++ b/src/components/inputs/text-input/text-input.mod.css
@@ -19,6 +19,7 @@
   transition: var(--transition-standard);
   outline: none;
   box-shadow: none;
+  box-sizing: border-box;
   appearance: none;
 }
 
