--- a/src/components/inputs/password-input/password-input.mod.css
+++ b/src/components/inputs/password-input/password-input.mod.css
@@ -6,6 +6,7 @@
 }
 
 .input {
+  box-sizing: border-box;
   color: var(--font-color-default);
   font-family: var(--font-family-default);
   font-size: var(--font-size-default);
