--- a/src/components/internals/calendar-menu/calendar-menu.mod.css
+++ b/src/components/internals/calendar-menu/calendar-menu.mod.css
@@ -5,6 +5,7 @@
   border-radius: var(--border-radius-input);
   margin-top: var(--spacing-4);
   position: absolute;
+  box-sizing: border-box;
   width: 100%;
   background-color: var(--color-white);
   z-index: 1;
