chore: revert playground css

--- a/src/components/avatar/avatar.mod.css
+++ b/src/components/avatar/avatar.mod.css
@@ -9,6 +9,7 @@
   font-family: var(--font-family-default);
   background-color: var(--color-gray-60);
   border-radius: 100%;
+  font-size: var(--font-size-default);
   color: var(--color-white);
   display: flex;
   justify-content: center;
@@ -35,20 +36,29 @@
   opacity: 0.7;
 }
 
+.initials-s {
+  font-size: 1em;
+}
+
+.initials-m {
+  font-size: 1.5em;
+}
+
+.initials-l {
+  font-size: 3em;
+}
+
 .avatar-s {
-  font-size: 1rem;
   height: var(--size-s);
   width: var(--size-s);
 }
 
 .avatar-m {
-  font-size: 1.5rem;
   height: var(--size-m);
   width: var(--size-m);
 }
 
 .avatar-l {
-  font-size: 3rem;
   height: var(--size-l);
   width: var(--size-l);
 }
