--- a/src/components/inputs/money-input/money-input.mod.css
+++ b/src/components/inputs/money-input/money-input.mod.css
@@ -9,6 +9,7 @@
   padding: 0 var(--spacing-8);
   align-items: center;
   min-width: 72px;
+  font-size: var(--font-size-default);
   box-sizing: border-box;
 }
 
