--- a/src/components/internals/calendar-body/calendar-body.mod.css
+++ b/src/components/internals/calendar-body/calendar-body.mod.css
@@ -2,6 +2,7 @@
   width: 100%;
   align-items: center;
   display: flex;
+  font-size: var(--font-size-default);
   font-family: var(--font-family-default);
 }
 
