--- a/src/components/typography/text/text.mod.css
+++ b/src/components/typography/text/text.mod.css
@@ -15,7 +15,7 @@
 .body-text {
   font-family: var(--font-family-default);
   font-size: var(--font-body);
-  color: var(--color-black);
+  color: var(--font-color);
   margin: 0;
 }
 
@@ -102,6 +102,8 @@ h5.subheadline {
 
 .wrap {
   font-family: var(--font-family-default);
+  color: var(--font-color);
+  font-size: var(--font-body);
   white-space: pre-wrap;
 }
 
